removing unnecessary codes.