@@ -1,30 +1,20 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'com.android.library'
+//apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 29
         versionCode 1
-        versionName "1.7"
-        applicationId "com.dengage.sdk"
-
-        testApplicationId "com.test.foo"
-        testInstrumentationRunner "android.test.InstrumentationTestRunner"
-        testHandleProfiling true
-        testFunctionalTest true
-
+        versionName "0.0.1"
+        //applicationId "com.dengage.sdk"
     }
 
-    testBuildType "debug"
 
     buildTypes {
-
-        debug {
-            debuggable true
-        }
 
         release {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -33,6 +23,8 @@ android {
 
     repositories {
         mavenCentral()
+        google()
+        jcenter()
     }
 
     sourceSets {
@@ -40,46 +32,21 @@ android {
             java.srcDirs = ['src/main/java']
         }
     }
-
-    testOptions {
-        unitTests {
-            returnDefaultValues true
-            all {
-                jvmArgs '-XX:MaxPermSize=256m'
-                if (it.name == 'testDebugUnitTest') {
-                    systemProperty 'debug', 'true'
-                }
-            }
-        }
-    }
-
 }
-
-
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.material:material:1.0.0'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support:support-annotations:24.0.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test:rules:1.1.0'
-    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-
 }
 
 repositories {
     mavenCentral()
 }
 
-apply plugin: 'com.google.gms.google-services' // Add this line
+//apply plugin: 'com.google.gms.google-services'
 
